--- a/nginx.tmpl
+++ b/nginx.tmpl
@@ -57,6 +57,10 @@ map $scheme $proxy_x_forwarded_ssl {
   https on;
 }
 
+# Compresses responses using the "gzip" method
+gzip on;
+gzip_min_length 1000;
+gzip_proxied    expired no-cache no-store private auth;
 gzip_types text/plain text/css application/javascript application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
 log_format vhost '$host $remote_addr - $remote_user [$time_local] '
